theme.css
/* ... */
/* close buttons that use a text cross instead of an SVG */
.document-search-close-button,
.modal-close-button,
.is-mobile .document-search .document-search-close-button,
.is-mobile .document-replace .document-search-close-button {
  padding: var(--size-2-1);
  width: 1.5rem;
  height: 1.5rem;
  display: flex;
  align-content: center;
  --icon-size: var(--icon-s);
  --icon-stroke: var(--icon-s-stroke-width);
  text-align: center;
  justify-content: center;
  line-height: 20px;
}
.document-search-close-button:before,
.modal-close-button:before {
  /* This uses a text cross instead of an SVG. Hack for visual alignment. */
  margin-top: -1px;
}

/* Tab close button on left, macOS standard */
.mod-macos {
  .workspace .mod-root {
    .workspace-tab-header .workspace-tab-header-inner-close-button {
      position: static;
      order: 0;
    }
    .workspace-tab-header-inner-icon,
    .workspace-tab-header-inner-title {
      order: 1;
    }
  }
  .modal-close-button {
    left: var(--size-2-3);
    right: auto;
  }
  .mod-community-modal .modal-sidebar .setting-item:first-child {
    margin-left: auto;
  }
  .modal-sidebar .community-modal-controls {
    padding-left: var(--size-4-5);
  }
  .multi-select-pill {
    padding-left: 0.25em;

    .multi-select-pill-remove-button {
      order: 0;
    }
    .multi-select-pill-content {
      order: 1;
      margin: 0;
    }
  }
}
/* #endregion */
/* #region Navigation buttons */
/* Styled similarly to close button */

.modal-setting-back-button-icon,
.mod-root .workspace-tab-header-status-icon {
  color: var(--theme-color-control);
  border: none;
  border-radius: 100%;
  background-color: transparent;
  /* Above .modal-title */
  z-index: 2;
  display: flex;
  justify-content: center;
  align-content: center;
  width: 1.5rem;
  height: 1.5rem;
}
@media (hover: hover) {
  .modal-setting-back-button-icon:hover,
  .mod-root .workspace-tab-header-status-icon:hover {
    color: var(--theme-color-control);
    background-color: var(--theme-color-navigationButtonBgHover);
  }
  .mod-root .workspace-tab-header-status-icon .svg-icon {
    width: 80%;
  }
}
/* #endregion */
/* #region Notices */
/* Note that Excalidraw .HintView uses a smaller version, which could be generalised */
.notice-container {
  padding: 0;
  right: 1rem;
  top: 1rem;
}
.is-mobile .notice-container {
  padding: 0.5em 0.5em 2em 0.5em;
  top: var(--safe-area-inset-top);
  left: auto;
  right: var(--safe-area-inset-right);
}
.is-phone .notice-container {
  padding: 0.5em 0.5em 2em 0.5em;
  top: var(--safe-area-inset-top);
  left: var(--safe-area-inset-left);
  right: var(--safe-area-inset-right);
  max-width: 100%;
  margin: 0 auto;
}
.notice,
.is-phone .notice {
  border-radius: 1em;
  background-color: var(--background-modifier-message);
  color: var(--theme-color-notice);
  box-shadow: var(--shadow-s);
  padding: 1em 1.5em;
}
.notice {
  margin: 0 0 1rem 0;
}
.is-phone .notice {
  text-align: center;
  max-width: none;
  margin: 0rem 0.5rem 1rem 0.5rem;
}
/* #endregion */
/* #region Workspace */

.app-container {
  background-color: var(--background-secondary);
  background: var(--theme-gradient-bottomToTop);
}
.theme-setting-fullWidthStatusBar .horizontal-main-container {
  margin-bottom: var(--theme-length-statusBarHeight);
}
.workspace {
  background-color: var(--background-secondary);
  background: var(--theme-gradient-bottomToTop);
}
.workspace-tabs .workspace-leaf {
  background: transparent;
}
.workspace-split.mod-root {
  background: transparent;
  background: var(--theme-gradient-topToBottom);
  padding-bottom: 1.5rem;
  padding: 0 0.5em 2em 0.5em;

  .workspace-tabs.mod-top {
    padding-top: 0.5rem;
  }
}
.sidebar-toggle-button,
.workspace-tabs.mod-top,
.is-focused .sidebar-toggle-button,
.is-focused .workspace-tabs.mod-top {
  --tab-container-background: transparent;
}
.workspace-tab-header {
  color: var(--theme-color-textTabInactive);
  background-color: var(--tab-background-inactive);
}
.workspace-tab-header.is-active {
  color: var(--tab-text-color-active);
  background-color: var(--tab-background-active);
  box-shadow: var(--theme-shadow-input);
}

/* Drag */
.workspace-drop-overlay:before {
  animation: 0.5s 1 alternate fadein;
  background-color: var(--theme-color-dragTarget);
  border-radius: var(--radius-m);
  opacity: 1;
}
.workspace-fake-target-overlay {
  background: transparent;
}

/* Tabs */
.workspace-tab-header {
  border-radius: var(--tab-radius-active) var(--tab-radius-active) 0 0;
}
@media (hover: hover) {
  .workspace-tab-header:not(.is-active):hover .workspace-tab-header-inner {
    color: var(--icon-color-focused);
    background-color: var(--theme-color-tabBgInactiveHover);
  }
  .workspace-tab-header-inner:hover .workspace-tab-header-inner-icon {
    color: var(--icon-color-focused);
    opacity: var(--icon-opacity);
  }
}
.workspace-tab-header-container-inner {
  gap: 0.25em;
}

.mod-left-split,
.mod-right-split {
  .workspace-tab-header-container {
    margin-top: 0;
  }
  .workspace-tabs.mod-top > .workspace-tab-header-container {
    margin-top: 0.5em;
  }
  .workspace-tab-header-container-inner {
    margin: 0.5em 0 0 0;
  }
}

/* Stacked tabs */
.workspace
  .mod-root
  .workspace-tabs.mod-stacked
  .workspace-tab-container
  .workspace-tab-header {
  background-color: var(--tab-background-inactive);
  box-shadow: var(--theme-shadow-input);
}
.workspace
  .mod-root
  .workspace-tabs.mod-stacked
  .workspace-tab-container
  .workspace-tab-header.is-active {
  background-color: var(--background-primary);
}

/* Empty state */
.empty-state-container {
  background: var(--theme-color-emptyStateBg);
  border-radius: var(--radius-m);
  max-height: none;
  max-width: none;
  padding: 1em 1.5em 1.5em 1.5em;
}
.empty-state-action-list,
.is-mobile .empty-state-action-list {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  margin-top: 0;
}
.empty-state-action-list .empty-state-action {
  padding: 0 1.5em;
}
/* ... */

